// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`furet-ui-form-button component snapshot isHidden 1`] = `<!---->`;

exports[`furet-ui-form-button component snapshot isReadonly 1`] = `
<button
  class="button is-primary is-outlined"
  disabled="disabled"
>
  <span
    class="icon"
  >
    <span
      class="icon"
    >
      <i
        class="fa fa-th fa-lg"
      />
    </span>
  </span>
   
  <span>
    Test
  </span>
</button>
`;

exports[`furet-ui-form-button component snapshot not isReadonly 1`] = `
<button
  class="button is-primary is-outlined"
>
  <span
    class="icon"
  >
    <span
      class="icon"
    >
      <i
        class="fa fa-th fa-lg"
      />
    </span>
  </span>
   
  <span>
    Test
  </span>
</button>
`;

exports[`furet-ui-form-button component snapshot with class 1`] = `
<button
  class="button c1 c2"
>
  <span
    class="icon"
  >
    <span
      class="icon"
    >
      <i
        class="fa fa-th fa-lg"
      />
    </span>
  </span>
   
  <span>
    Test
  </span>
</button>
`;

exports[`furet-ui-resource-form component furet-ui-resource-form: snapshot 1`] = `
<section>
  <div
    class="loading-overlay is-active is-full-page"
  >
    <div
      class="loading-background"
    />
     
    <div
      class="loading-icon"
    />
  </div>
   
  <header
    id="header_page"
    name="furet-ui-page"
  >
    <nav
      class="level"
    >
      <div
        class="level-left"
      >
        <div
          class="level-item content"
        >
          <h1
            class="is-large"
          >
            Entry 1
          </h1>
        </div>
      </div>
    </nav>
     
    <div
      class="buttons is-grouped is-centered"
    >
      <a
        class="button is-primary is-outlined"
      >
        <span
          class="icon"
        >
          <span
            class="icon"
          >
            <i
              class="fa fa-arrow-left fa-lg"
            />
          </span>
        </span>
         
        <span>
          [object Promise]
        </span>
      </a>
       
      <!---->
       
      <!---->
       
      <!---->
       
      <!---->
       
      <!---->
       
      <!---->
       
    </div>
  </header>
   
  <div
    class="section"
  >
    <div
      id="id"
    >
      <div
        class="columns"
      >
        <div
          class="column"
        >
          <span
            class="is-primary is-top is-medium b-tooltip"
            data-label=""
            name="title"
            style="transition-delay: 0ms; width: 100%;"
          >
            <div
              class="field"
              style="width: inherit;"
            >
              <label
                class="label"
              >
                Title
              </label>
               
              <div>
                <span>
                  Entry 1
                </span>
              </div>
               
              <!---->
            </div>
          </span>
        </div>
         
        <div
          class="column"
        >
          <span
            class="is-primary is-top is-medium b-tooltip"
            data-label=""
            name="color"
            style="transition-delay: 0ms; width: 100%;"
          >
            <div
              class="field"
              style="width: inherit;"
            >
              <label
                class="label"
              >
                Color
              </label>
               
              <div>
                <span>
                  red
                </span>
              </div>
               
              <!---->
            </div>
          </span>
        </div>
      </div>
    </div>
  </div>
   
  <nav
    class="level"
  >
    <div
      class="level-left"
    >
      <div
        class="level-item content"
      >
        <h1
          class="is-large"
        >
          Entry 1
        </h1>
      </div>
    </div>
  </nav>
</section>
`;
